# homoApplication

./: CMakeLists.txt  README.md
experiment/stats/: deriv_2d_cesm.py  deriv_3d_hurricane.py  deriv_3d_nyx.py  mean_2d_cesm.py  mean_2d_cesm_tripti.py  mean_3d_hurricane.py  mean_3d_hurricane_tripti.py  mean_3d_nyx.py  mean_3d_nyx_tripti.py  var_2d_cesm.py  var_2d_cesm_tripti.py  var_3d_hurricane.py  var_3d_hurricane_tripti.py  var_3d_nyx.py  var_3d_nyx_tripti.py
include/: SZ_app_utils.hpp  SZ_def.hpp  SZp_1D.hpp  SZp_2D.hpp  SZp_3D.hpp  SZp_LorenzoPredictor1D.hpp  SZp_LorenzoPredictor2D.hpp  SZp_LorenzoPredictor2D_1D.hpp  SZp_LorenzoPredictor3D.hpp  SZp_LorenzoPredictor3D_1D.hpp  SZp_app_utils.hpp  SZp_application_entry.hpp  SZr_RegressionPredictor2D.hpp  SZr_RegressionPredictor3D.hpp  SZr_app_utils.hpp  SZx_1D.hpp  SZx_2D.hpp  SZx_3D.hpp  SZx_MeanPredictor.hpp  SZx_MeanPredictor1D.hpp  SZx_MeanPredictor2D.hpp  SZx_MeanPredictor2D_1D.hpp  SZx_MeanPredictor2D_nd.hpp  SZx_MeanPredictor3D.hpp  SZx_MeanPredictor3D_1D.hpp  SZx_app_utils.hpp  SZx_application_entry.hpp  application_utils.hpp  heatdis_1b.hpp  heatdis_entry.hpp  ompSZp_typemanager.hpp  settings.hpp  typemanager.hpp  typemanager_nd.hpp  typemanager_nd_one_pass.hpp  utils.hpp
include/heatdis/: SZp_heatdis_entry.hpp  SZp_heatdis_rowwise_1b.hpp  SZp_heatdis_rowwise_2b.hpp  SZp_heatdis_utils.hpp  SZp_typemanager.hpp  heatdis_entry.hpp  heatdis_rowwise_1b.hpp  heatdis_rowwise_2b.hpp  heatdis_utils.hpp  utils.hpp
plot/: gs_plot.ipynb  ht_plot.ipynb
setting/: deriv.2d.json  deriv.3d.json  heatdis.L1.json  heatdis.L2.json  heatdis.M2.json  heatdis3d.json  mean.2d.json  mean.3d.json  var.2d.json  var.3d.json
test/: CMakeLists.txt  SZp_1dlorenzo_derivative_decop.cpp  SZp_1dlorenzo_derivative_lorenzo.cpp  SZp_1dlorenzo_derivative_quant.cpp  SZp_1dlorenzo_heatdis_doc.cpp  SZp_1dlorenzo_heatdis_lorenzo.cpp  SZp_1dlorenzo_heatdis_quant.cpp  SZp_1dlorenzo_mean_decop.cpp  SZp_1dlorenzo_mean_lorenzo.cpp  SZp_1dlorenzo_mean_quant.cpp  SZp_2d_derivative_decop.cpp  SZp_2d_derivative_post.cpp  SZp_2d_derivative_pre.cpp  SZp_2d_heatdis_decop.cpp  SZp_2d_heatdis_post.cpp  SZp_2d_heatdis_pre.cpp  SZp_2d_mean_decop.cpp  SZp_2d_mean_post.cpp  SZp_2d_mean_pre.cpp  SZp_2dlorenzo_dxdy_decop.cpp  SZp_2dlorenzo_dxdy_postPred.cpp  SZp_2dlorenzo_mean_decOp.cpp  SZp_2dlorenzo_mean_postPred.cpp  SZp_2dlorenzo_mean_prePred.cpp  SZp_3d_derivative_decop.cpp  SZp_3d_derivative_post.cpp  SZp_3d_derivative_pre.cpp  SZp_3d_mean_decop.cpp  SZp_3d_mean_post.cpp  SZp_3d_mean_pre.cpp  SZp_heatdis_rowwise_1d_doc.cpp  SZp_heatdis_rowwise_1d_lorenzo.cpp  SZp_heatdis_rowwise_1d_quant.cpp  SZp_heatdis_rowwise_2d_doc.cpp  SZp_heatdis_rowwise_2d_lorenzo.cpp  SZp_heatdis_rowwise_2d_quant.cpp  SZr_2d_mean_decop.cpp  SZr_2d_mean_fast.cpp  SZr_2d_variance_decop.cpp  SZr_2d_variance_fast.cpp  (+148 more)
